--- a/index.html
+++ b/index.html
@@ -13,40 +13,31 @@
     </div>
       <h1>Jaukių namų tradicija</h1>
       <img src="img/line.png">
-      <p>NAMŲ PYNĖS – nauja gyvenvietė sostinėje, Tuskulėnų</p>
-      <p>gatvėje, supinta iš septynių daugiabučių, ypatingoje,</p>
-      <p>duona kvepiančioje Vilniaus vietoje.</p>
-      <br>
-      <p>130 metų šeimomis besirūpinusi seniausia duonos</p>
-      <p>kepykla užleidžia vietą naujai, jaukių namų tradicijai.</p>
-      <p>Registruokitės ir informaciją apie projekto butus</p>
-      <p>gaukite PIRMIEJI!</p>
+      <p>NAMŲ PYNĖS – nauja gyvenvietė sostinėje, Tuskulėnų<br>
+      gatvėje, supinta iš septynių daugiabučių, ypatingoje,<br>
+      duona kvepiančioje Vilniaus vietoje.</p>
+      130 metų šeimomis besirūpinusi seniausia duonos<br>
+      kepykla užleidžia vietą naujai, jaukių namų tradicijai.<br>
+      Registruokitės ir informaciją apie projekto butus<br>
+      gaukite PIRMIEJI!</p>
     <div>
       <img src="img/pin.png">
       <img src="img/key.png">
     </div>
-    <div>
-      vieta mieste
-      noriu būti pirmas
-    </div>
+    <section>
+      <a href="http://files.explosm.net/comics/Rob/addict.png"> vieta mieste</a>
+      <a href="" target=_blank> noriu būti pirmas</a>
+    </section>
   </div>
   <div class="bottom_bar">
-
+    <div id="left">
+      © 2016 Namų pynės
+    <br>
+      Svetainė sukurta: EVO MEDIA
+    </div>
+    <div id="center">
+      Projektą plėtoja:
+      <img src="img/eika.png">
   </div>
-<!--
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">35 days left</p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-  </div>
-</div>
--->
 </body>
 </html>
