--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 <!-- My css -->
-<link href="style.css" type="text/css" rel="stylesheet">
+<link href="/style.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto">
 </head>
 <body>
