--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <!-- Add jQuery library -->
 <script
-  src="http://code.jquery.com/jquery-3.1.1.js"
+  src="https://code.jquery.com/jquery-3.1.1.js"
   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
   crossorigin="anonymous"></script>
 
