--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ $(document).ready(function() {
 	$(".fancybox").fancybox({
 		maxWidth	: 800,
 		maxHeight	: 600,
-		fitToView	: false,
+		fitToView	: true,
 		width		: '50%',
 		height		: '60%',
 		autoSize	: true,
