--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ $(document).ready(function() {
 		maxHeight	: 600,
 		fitToView	: true,
 		width		: '50%',
-		height		: '60%',
-		autoSize	: true,
+		height		: '40%',
+		autoSize	: false,
 		closeClick	: false,
 		openEffect	: 'none',
 		closeEffect	: 'none'
