--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ $(document).ready(function() {
 });
 </script>
 
-
+<div class="main_container">
   <div class="navigation">
     <div class="logo">
       <img src="img/logo.png">
     </div>
-      <h1>Jaukių namų tradicija</h1>
-      <img src="img/line.png">
+    <h1>Jaukių namų tradicija</h1>
+    <img src="img/line.png">
       <p>NAMŲ PYNĖS – nauja gyvenvietė sostinėje, Tuskulėnų<br>
       gatvėje, supinta iš septynių daugiabučių, ypatingoje,<br>
       duona kvepiančioje Vilniaus vietoje.</p>
@@ -77,6 +77,7 @@ $(document).ready(function() {
       </ul>
     </section>
   </div>
+
   <footer>
     <div id="footer_left">
       © 2016 Namų pynės
@@ -86,6 +87,8 @@ $(document).ready(function() {
     <div id="footer_center">
       Projektą plėtoja:
       <a href="http://www.eika.lt" target="_blank"><img src="img/eika.png"></a>
+    </div>
   </footer>
+</div>
 </body>
 </html>
