--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@ $(document).ready(function() {
     </div>
     <h1>Jaukių namų tradicija</h1>
     <img src="img/line.png">
-      <p>NAMŲ PYNĖS – nauja gyvenvietė sostinėje, Tuskulėnų<br>
-      gatvėje, supinta iš septynių daugiabučių, ypatingoje,<br>
-      duona kvepiančioje Vilniaus vietoje.</p>
+      <p>WAFFFFFFFLES ALL AROUND ME</p>
       <p>130 metų šeimomis besirūpinusi seniausia duonos<br>
       kepykla užleidžia vietą naujai, jaukių namų tradicijai.<br>
       Registruokitės ir informaciją apie projekto butus<br>
